policies/drop-all-capabilities.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: drop-all-capabilities
spec:
  categories:
  - DevOps Best Practices
  criteriaLocked: true
  description: Alert when a deployment does not drop all capabilities.
  enforcementActions: []
  eventSource: NOT_APPLICABLE
  exclusions:
  - name: Don't alert on stackrox namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: stackrox
        label: null
    image: null
    expiration: null
  - name: Don't alert on kube-system namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: kube-system
        label: null
    image: null
    expiration: null
  - name: Don't alert on istio-system namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: istio-system
        label: null
    image: null
    expiration: null
  isDefault: false
  lifecycleStages:
  - DEPLOY
  mitreAttackVectors: []
  mitreVectorsLocked: true
  policyName: GitOps - Drop All Capabilities
  policySections:
  - sectionName: ''
    policyGroups:
    - fieldName: Drop Capabilities
      booleanOperator: OR
      negate: false
      values:
      - value: ALL
  rationale: Because capabilities permit privileged operations, it is a recommended
    best practice to drop all capabilities that a deployment can have, and then add
    only the capabilities that the deployment needs.
  remediation: 'Ensure that the deployment manifest has `drop: ALL` in the securityContext
    section of the container manifest.'
  scope: []
  severity: LOW_SEVERITY
  disabled: true
